fix(shop): refund PG+clinic fail-closed + Path B INCOME unique slot
After PortOne cancel, clinic (session/ERP/REFUNDED) failures throw
ShopRefundClinicChainException for safe retry. When mapping INCOME slot
is occupied by a foreign order, create current-order INCOME on ADDITIONAL
to avoid uk_financial_transactions_dedupe silent partial success.

Co-authored-by: beta0629 <beta0629@users.noreply.github.com>